--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:chat
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:chat
 
+spring.datasource.url=jdbc:mysql://springboot-chatservice-database.c9ovbv8asyjw.ap-northeast-2.rds.amazonaws.com:3306/chatservice
+spring.datasource.username=admin
+spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
 
