profile page data Add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=local
 spring.redis.host=localhost
 spring.redis.port=6379
+
+cloud.aws.credentials.accessKey=AKIAYXPKA2Y3NOFTG77V
+cloud.aws.credentials.secretKey=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
+cloud.aws.stack.auto=false
+
+# AWS S3 Service bucket
+cloud.aws.s3.bucket=springboot-chatservice
+cloud.aws.region.static=ap-northeast-2
+
+# AWS S3 Bucket URL
+cloud.aws.s3.bucket.url=https://s3.ap-northeast-2.amazonaws.com/springboot-chatservice
