--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ configurations {
 
 repositories {
     mavenCentral()
+//    maven { url 'https://repo.spring.io/libs-milestone'}
 }
 
 dependencies {
@@ -55,7 +56,16 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api'
+
+    // AWS S3
+//    compile 'org.springframework.cloud:spring-cloud-starter-aws'
 }
+
+//dependencyManagement {
+//    imports {
+//        mavenBom 'org.springframework.cloud:spring-cloud-aws:2.0.0.RC2'
+//    }
+//}
 
 test {
     useJUnitPlatform()
