--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,6 @@ configurations {
 
 repositories {
     mavenCentral()
-//    maven { url 'https://repo.spring.io/libs-milestone'}
 }
 
 dependencies {
@@ -57,15 +56,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api'
 
-    // AWS S3
-//    compile 'org.springframework.cloud:spring-cloud-starter-aws'
-}
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.1.RELEASE'
 
-//dependencyManagement {
-//    imports {
-//        mavenBom 'org.springframework.cloud:spring-cloud-aws:2.0.0.RC2'
-//    }
-//}
+}
 
 test {
     useJUnitPlatform()
