gitignore setting test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,9 @@ spring.profiles.active=local
 spring.redis.host=localhost
 spring.redis.port=6379
 
-cloud.aws.credentials.accessKey=AKIAYXPKA2Y3NOFTG77V
-cloud.aws.credentials.secretKey=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
+# 깃 이그노어 반영 확인
+cloud.aws.credentials.accessKey="엑세스키"
+cloud.aws.credentials.secretKey="시크릿키"
 cloud.aws.stack.auto=false
 
 # AWS S3 Service bucket
