--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.redis.host=localhost
 spring.redis.port=6379
 
 # 깃 이그노어 반영 확인
-cloud.aws.credentials.accessKey="AKIAYXPKA2Y3A6N47AZJ"
-cloud.aws.credentials.secretKey="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"
+cloud.aws.credentials.accessKey=AKIAYXPKA2Y3KTBZXXKV
+cloud.aws.credentials.secretKey=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
 cloud.aws.stack.auto=false
 
 # AWS S3 Service bucket
