--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
 
-spring.profiles.active=15.164.97.250
+#spring.profiles.active=15.164.97.250
+spring.profiles.active=local
 spring.redis.host=localhost
 spring.redis.port=6379
 
